--- a/.env
+++ b/.env
@@ -3,11 +3,10 @@ FLASK_ENV=development
 SECRET_KEY=supersecretkey
 DATABASE_URL=postgresql+psycopg2://user:pass@host/db
 
-MAIL_SERVER = 'smtp.outlook.com'         # or your SMTP server
+MAIL_SERVER = 'smtp.gmaiil.com'         # or your SMTP server
 MAIL_PORT = 587                       # 465 for SSL, 587 for TLS
 MAIL_USE_TLS = True                   # True for TLS, False for SSL
 MAIL_USE_SSL = False                  # True for SSL, False for TLS
-MAIL_USERNAME = 'your_email@outlook.com'
+MAIL_USERNAME = 'your_email@gmail.com'
 MAIL_PASSWORD = 'your_app_password'   # Use an app password if using Gmail
-MAIL_DEFAULT_SENDER = 'your_email@outlook.com'
-
+MAIL_DEFAULT_SENDER = 'your_email@gmail.com'
